--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="HTML5 Template">
 		<meta name="description" content="Cộng đồng chế ảnh Meme">
 		<meta name="author" content="etheme.com">
-		<title>Cộng đồng chế ảnh Meme</title>
+		<title>Ảnh chế Meme</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 		
